--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,12 +1,14 @@
 .container{
     padding: 0 50px;
     height: 100px;
-    background-color: #c9392e;
+    background-color: #fdd000;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: sticky;
     top: 0;
+    z-index: 10;
+ 
 }
 
 .item{
