--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #fdd000;
+    background-color: #ff3b41;
 }
 
 .imgContainer{
