--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -1,12 +1,30 @@
 .container{
     height: calc(100vh - 100px);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     background-color: #ff3b41;
+    overflow: hidden;
+}
+
+.arrowContainer{
+    position: absolute;
+    width: 5%;
+    height: 10%;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.wrapper{
+    width: 300vw;
+    height: 100%;
+    display: flex;
+    transition: all 1.5s ease-in-out ;
 }
 
 .imgContainer{
-    width: 650px;
-    height: 500px;
+    width: 100vw;
+    height: 100%;
+    position: relative;
 }
+
