--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -1,6 +1,6 @@
 .container{
     height: calc(100vh - 100px);
-    background-color: #ff3b41;
+    background-color: #d1411e;
     overflow: hidden;
 }
 
