--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,7 +1,7 @@
 .container{
     padding: 0 50px;
     height: 100px;
-    background-color: #ff3b41;
+    background-color: #d1411e;
     display: flex;
     align-items: center;
     justify-content: space-between;
