--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -1,30 +1,84 @@
-.container{
-    height: calc(100vh - 100px);
-    background-color: #d1411e;
-    overflow: hidden;
+.container {
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-color: #0D0D0D;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
 }
 
-.arrowContainer{
-    position: absolute;
-    width: 5%;
-    height: 10%;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    cursor: pointer;
-    z-index: 10;
-}
-
-.wrapper{
-    width: 300vw;
-    height: 100%;
+.bloc{
     display: flex;
-    transition: all 1.5s ease-in-out ;
+    flex: 1;
+    height: calc(100vh - 100px);
+    background-color: #fff;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 2rem;
+    
 }
 
-.imgContainer{
-    width: 100vw;
-    height: 100%;
-    position: relative;
+.bloc h4{
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    transform: translateY(2rem);
 }
 
+.bloc p{
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+
+.bloc:first-child{
+    align-items: flex-start;
+    margin: 0;
+}
+
+.bloc:first-child h1{
+    color: #FFC42B;
+    transform: translateX(-.5rem);
+}
+
+.bloc:last-child h1{
+    transform: translateY(-2.3rem);
+    text-align: right;
+}
+
+
+.bloc:last-child{
+    background-color: #FFC42B;
+    flex: 1;
+}
+
+.title{
+    font-size: 14rem;
+    text-transform: uppercase;
+}
+
+.button{
+    border-radius: 5px;
+    width: 150px;
+    border: none;
+    font-weight: 700;
+    padding: .9rem 0;
+    cursor: pointer;
+    outline: none;
+    background-color: #FFC42B;
+    color: white;
+    text-transform: uppercase;
+}
+
+
+.imgBloc{
+    width: 550px;
+    height: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+ 
+}
