--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -61,23 +61,44 @@
     justify-content: space-between;
   }
   
-  .done {
+.done {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.inProgress {
+display: flex;
+flex-direction: column;
+align-items: center;
+animation: inProgress 1s ease infinite alternate;
+}
+
+@keyframes inProgress{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.undone {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .inProgress {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    animation: inProgress 1s ease infinite alternate;
-  }
+    opacity: 0.3;
+}
 
 
-  .checkedIcon{
-      color: #87B87F;
-  }
+.checkedIcon{
+    color: #87B87F;
+}
+
+
+.undone .checkedIcon, .inProgress .checkedIcon{
+    opacity: 0;
+}
 
 /* Right side - SUMMARY */
 
