--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  overflow:  !important;
 
 }
 
@@ -84,6 +85,4 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
-
- 
 }
